# roman-numeral-converter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.MD
.github/workflows/: check_ruff.yml  coverage.yml  release.yml  tests_matrix.yml
DSL/: DSL.py  README.md  dsl_command.py  dsl_handlers.py  dsl_parser.py  dsl_variable.py
api/: main.py
roman/: roman.py
roman_numerals/: roman.py
roman_numerals_converter/: converter.py
tests/: test_cli.py  test_converter.py  test_roman.py
