[tool.poetry]
name = "software-dev"
version = "0.1.0"
description = ""
authors = ["ceddicedced <cedric@busacker.dev>"]
readme = "README.md"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.poetry.dependencies]
python = "^3.10"
aio-mc-rcon = "^3.2.1"
click = "^8.1.7"
jinja2 = "^3.1.2"
ruff = "^0.1.6"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
