[tool.poetry]
name = "roman_numerals"
version = "0.1.0"
description = ""
authors = ["ceddicedced <cedric@busacker.dev>"]
readme = "README.md"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
ruff = "^0.1.6"
pre-commit = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
